# MaszynaRAM

./: .gitignore  CMakeLists.txt  README.md  accumulator_service.c  accumulator_service.h  commands_queue.c  commands_queue.h  input_output_tapes.c  input_output_tapes.h  main.c  main_service.c  main_service.h  memory_service.c  memory_service.h  prompts_and_exceptions.c  prompts_and_exceptions.h  stream_control.c  stream_control.h  support_functions.c  support_functions_and_declarations.h
examples/: NWD.txt  czy_ciag_z_jednym_maksimum.txt  parzystenieparzyste.txt  przyklad1.txt  przyklad2.txt  przyklad3.txt  przyklad4.txt  przyklad5.txt  przyklad6.txt  reszta_z_dzielenia.txt  suma_ciagu.txt  suma_liczb.txt
